--- a/password/templates/index.html
+++ b/password/templates/index.html
@@ -47,13 +47,12 @@
       					<label for="psw"><b>Password</b></label>
       					<input type="password" placeholder="Repetir Senha" name="psw"  class="form-control" id="senha_dois" required>
       					<br/>
-      					<p id="iguais"> Senhas Diferentes </p>
       					<br/>
 						<button type="submit" class = "btn btn-primary" disabled="True" id="botao">Enviar</button>
 					</form>
 					<br/>
 					<ul>
-						<li>É preciso ter 8 digitos e cumprir outras 2 exigências para se Registrar</li>
+						<li>É preciso ter 8 digitos e cumprir as exigências para se Registrar</li>
 						<li>A senha precisa ter ao menos uma letra </li>
 						<li>A senha precisa ter ao menos um número </li>
 						<li>A senha precisa ter ao menos um símbolo </li>
@@ -64,9 +63,9 @@
 					<h4>Nível de Segurança</h4>
 					<ul>
 						<li class="nivel_um" id="nivel_um">Senha Fraca</li>
-						<li class="nivel" id="nivel_dois">Quase lá</li>
-						<li class="nivel" id="nivel_tres">Inquebrável</li>
-						<li class="nivel" id="nivel_quatro">Nem o Neo descobre essa</li>
+						<li class="nivel" id="nivel_dois">Senha Mediana</li>
+						<li class="nivel" id="nivel_tres">Senha Forte</li>
+						<li class="nivel" id="nivel_quatro">Senha Inquebrável</li>
 					</ul>
 				</div>
 			</div>
